--- a/src/Antix.EASI.Web/Web.Release.config
+++ b/src/Antix.EASI.Web/Web.Release.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="DataContext" providerName="System.Data.SqlClient" 
+         connectionString="Server=(local);Database=Antix.EASI.Data;Trusted_Connection=True;"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
