--- a/src/Antix.EASI.Web/Web.config
+++ b/src/Antix.EASI.Web/Web.config
@@ -15,7 +15,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="DataContext" providerName="System.Data.SqlClient" connectionString="Server=TIM;Database=Antix.EASI.Data;Trusted_Connection=True;" />
+    <add name="DataContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\v11.0;Database=Antix.EASI.Data;Trusted_Connection=True;" />
   </connectionStrings>
   
   <system.web>
