--- a/src/Antix.EASI.Api/Antix.EASI.Api.csproj
+++ b/src/Antix.EASI.Api/Antix.EASI.Api.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Examinations\ExaminationsListController.cs" />
     <Compile Include="Examinations\Models\CreateExamination.cs" />
     <Compile Include="Examinations\Models\ExaminationsMapper.cs" />
+    <Compile Include="Examinations\Models\ExaminerInfo.cs" />
+    <Compile Include="Examinations\Models\LookupExaminers.cs" />
     <Compile Include="People\Examiners\ExaminersController.cs" />
     <Compile Include="People\Examiners\ExaminersListController.cs" />
     <Compile Include="People\Examiners\Models\CreateExaminer.cs" />
