--- a/src/Antix.EASI.Domain/Antix.EASI.Domain.csproj
+++ b/src/Antix.EASI.Domain/Antix.EASI.Domain.csproj
@@ -40,7 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Examinations\ICreateExaminationService.cs" />
+    <Compile Include="Examinations\ILookupExaminationsService.cs" />
     <Compile Include="Examinations\Models\CreateExaminationModel.cs" />
+    <Compile Include="Examinations\Models\ExaminationInfoModel.cs" />
+    <Compile Include="Examinations\Models\LookupExaminationsModel.cs" />
     <Compile Include="Examinations\Validation\CreateExaminationValidator.cs" />
     <Compile Include="Examinations\Validation\ICreateExaminationValidator.cs" />
     <Compile Include="People\Examiners\ICreateExaminerService.cs" />
