--- a/src/Antix.EASI.Api/Antix.EASI.Api.csproj
+++ b/src/Antix.EASI.Api/Antix.EASI.Api.csproj
@@ -58,11 +58,11 @@
     <Compile Include="Examinations\ExaminationsController.cs" />
     <Compile Include="Examinations\ExaminationsListController.cs" />
     <Compile Include="Examinations\Models\CreateExamination.cs" />
+    <Compile Include="Examinations\Models\ExaminationRegionScores.cs" />
     <Compile Include="Examinations\Models\ExaminationsMapper.cs" />
     <Compile Include="Examinations\Models\ExaminationInfo.cs" />
     <Compile Include="Examinations\Models\Examination.cs" />
     <Compile Include="Examinations\Models\LookupExaminations.cs" />
-    <Compile Include="Examinations\Models\UpdateExamination.cs" />
     <Compile Include="People\Examiners\ExaminersController.cs" />
     <Compile Include="People\Examiners\ExaminersListController.cs" />
     <Compile Include="People\Examiners\Models\CreateExaminer.cs" />
