--- a/src/Antix.EASI.Web/Antix.EASI.Web.csproj
+++ b/src/Antix.EASI.Web/Antix.EASI.Web.csproj
@@ -139,6 +139,15 @@
     <Content Include="client\examinations\list\examinations-list-directive.js" />
     <Content Include="client\examinations\examinations-api.js" />
     <Content Include="client\examinations\examinations.js" />
+    <Content Include="client\examinations\region-score\examination-region-score.css">
+      <DependentUpon>examination-region-score.less</DependentUpon>
+    </Content>
+    <Content Include="client\examinations\region-score\examination-region-score.min.css">
+      <DependentUpon>examination-region-score.css</DependentUpon>
+    </Content>
+    <Content Include="client\examinations\region-score\examination-severity-score.js" />
+    <Content Include="client\examinations\region-score\examination-region-score.cshtml" />
+    <Content Include="client\examinations\region-score\examination-region-score.js" />
     <Content Include="client\examiners\create\examiners-create.js" />
     <Content Include="client\examiners\edit\examiners-edit.js" />
     <Content Include="client\examiners\examiners-api.js" />
@@ -361,6 +370,11 @@
     </Content>
     <Content Include="client\patients\list\patients-list.css.map">
       <DependentUpon>patients-list.css</DependentUpon>
+    </Content>
+    <Content Include="client\examinations\region-score\examination-severity-score.cshtml" />
+    <Content Include="client\examinations\region-score\examination-region-score.less" />
+    <Content Include="client\examinations\region-score\examination-region-score.css.map">
+      <DependentUpon>examination-region-score.css</DependentUpon>
     </Content>
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <Content Include="Scripts\antix\form\clear-button\antix-form-clear-button.less" />
