--- a/src/Antix.EASI.Web/Antix.EASI.Web.csproj
+++ b/src/Antix.EASI.Web/Antix.EASI.Web.csproj
@@ -206,6 +206,12 @@
     <Content Include="Content\site\panel-buttons.min.css">
       <DependentUpon>panel-buttons.css</DependentUpon>
     </Content>
+    <Content Include="Content\site\variables.css">
+      <DependentUpon>variables.less</DependentUpon>
+    </Content>
+    <Content Include="Content\site\variables.min.css">
+      <DependentUpon>variables.css</DependentUpon>
+    </Content>
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
@@ -387,6 +393,10 @@
     <Content Include="client\examinations\edit\examinations-eric.less" />
     <Content Include="client\examinations\edit\examinations-eric.css.map">
       <DependentUpon>examinations-eric.css</DependentUpon>
+    </Content>
+    <Content Include="Content\site\variables.less" />
+    <Content Include="Content\site\variables.css.map">
+      <DependentUpon>variables.css</DependentUpon>
     </Content>
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <Content Include="Scripts\antix\form\clear-button\antix-form-clear-button.less" />
