--- a/src/Antix.EASI.Web/Antix.EASI.Web.csproj
+++ b/src/Antix.EASI.Web/Antix.EASI.Web.csproj
@@ -128,12 +128,12 @@
   <ItemGroup>
     <Content Include="client\app.js" />
     <Content Include="client\examinations\create\examinations-create.js" />
-    <Content Include="client\examinations\edit\examinations-eric.css">
+    <Content Include="client\examinations\eric\examinations-eric.css">
       <DependentUpon>examinations-eric.less</DependentUpon>
     </Content>
-    <Content Include="client\examinations\edit\examinations-eric.js" />
+    <Content Include="client\examinations\eric\examinations-eric.js" />
     <Content Include="client\examinations\edit\examinations-edit.js" />
-    <Content Include="client\examinations\edit\examinations-eric.min.css">
+    <Content Include="client\examinations\eric\examinations-eric.min.css">
       <DependentUpon>examinations-eric.css</DependentUpon>
     </Content>
     <Content Include="client\examinations\index\examinations-index.js" />
@@ -389,9 +389,9 @@
     <Content Include="client\examinations\examinations.css.map">
       <DependentUpon>examinations.css</DependentUpon>
     </Content>
-    <Content Include="client\examinations\edit\examinations-eric.svg" />
-    <Content Include="client\examinations\edit\examinations-eric.less" />
-    <Content Include="client\examinations\edit\examinations-eric.css.map">
+    <Content Include="client\examinations\eric\examinations-eric.svg" />
+    <Content Include="client\examinations\eric\examinations-eric.less" />
+    <Content Include="client\examinations\eric\examinations-eric.css.map">
       <DependentUpon>examinations-eric.css</DependentUpon>
     </Content>
     <Content Include="Content\site\variables.less" />
