return total count

--- a/src/Antix.EASI.Domain/Antix.EASI.Domain.csproj
+++ b/src/Antix.EASI.Domain/Antix.EASI.Domain.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Compile Include="Examinations\ICreateExaminationService.cs" />
     <Compile Include="Examinations\IDeleteExaminationService.cs" />
-    <Compile Include="Examinations\ILookupExaminationsService.cs" />
+    <Compile Include="Examinations\ISearchExaminationsService.cs" />
     <Compile Include="Examinations\IReadExaminationService.cs" />
     <Compile Include="Examinations\IUpdateExaminationService.cs" />
     <Compile Include="Examinations\Models\CreateExaminationModel.cs" />
@@ -51,7 +51,8 @@
     <Compile Include="Examinations\Models\ExaminationScoresModel.cs" />
     <Compile Include="Examinations\Models\ExaminationScoringExtensions.cs" />
     <Compile Include="Examinations\Models\IExaminationScoringModel.cs" />
-    <Compile Include="Examinations\Models\LookupExaminationsModel.cs" />
+    <Compile Include="Examinations\Models\SearchExaminationsModel.cs" />
+    <Compile Include="Examinations\Models\SearchExaminationsResultModel.cs" />
     <Compile Include="Examinations\Validation\CreateExaminationValidator.cs" />
     <Compile Include="Examinations\Validation\ICreateExaminationValidator.cs" />
     <Compile Include="Examinations\Validation\IUpdateExaminationValidator.cs" />
