--- a/src/Antix.EASI.Api/Antix.EASI.Api.csproj
+++ b/src/Antix.EASI.Api/Antix.EASI.Api.csproj
@@ -62,7 +62,8 @@
     <Compile Include="Examinations\Models\ExaminationsMapper.cs" />
     <Compile Include="Examinations\Models\ExaminationInfo.cs" />
     <Compile Include="Examinations\Models\Examination.cs" />
-    <Compile Include="Examinations\Models\LookupExaminations.cs" />
+    <Compile Include="Examinations\Models\SearchExaminations.cs" />
+    <Compile Include="Examinations\Models\SearchExaminationsResult.cs" />
     <Compile Include="People\Examiners\ExaminersController.cs" />
     <Compile Include="People\Examiners\ExaminersListController.cs" />
     <Compile Include="People\Examiners\Models\CreateExaminer.cs" />
